third commit Readme configuration file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h1 class="title">Thanks for Subscribing</h1>
           <div class="desc_container">
             <p class="desc">A confirmation email hass been sent to</p>
-            <h3 class="email_value"></h3><p>.Please open it and click the button inside to confirm your subscruption</p>
+            <p class="desc"><strong class="email_value"></strong>.Please open it and click the button inside to confirm your subscruption</p>
           </div>
           <button type="button" class="btn dismiss_btn ">Dismiss message</button>
         
